--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "14.2.5",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@types/node": "^20",
