--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/lodash": "^4.17.7",
     "axios": "^1.7.2",
     "chart.js": "^4.4.3",
+    "lodash": "^4.17.21",
     "next": "14.2.5",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
